# ords-demo

./: .env-sample  .ords-demo-ddl.sql.swp  Dockerfile  README.md  delete-payload.json  dockerignore  insert-payload.json  ords-demo-ddl.md  ords-security.md  pyproject.toml  update-payload.json
