[tool.poetry]
name = "ords-demo"
version = "0.1.0"
description = "ords-demo project"
authors = ["jeremy brex <jeremybrex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
pytest = "^7.0.1"
cx-Oracle = "^8.3.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
